# rustdesk-api-server

./: .gitignore  Cargo.toml  sqlx-data.json
libs/state/: Cargo.toml
libs/state/src/: bearer.rs  database.rs  lib.rs  password.rs  state.rs  ui.rs
libs/ui/: Cargo.toml
libs/ui/src/: lib.rs
libs/ui/templates/: about.html  css.html  footer.html  header.html  index.html  layout.html  login_form.html
libs/utils/: Cargo.toml
libs/utils/src/: address_book.rs  bearer.rs  lib.rs  tokens.rs  types.rs
src/: api.rs  bearer.rs  database.rs  main.rs  state.rs
