[package]
name = "rustdesk-api-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#axum = { version = "0.5", features = ["json"] }
to-socket-addrs = { version = "0.2", features = ["tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.19", features = ["rt-multi-thread", "sync"] }
tracing = "0.1"
tracing-subscriber = "0.2"

rocket = { version = "0.5.0-rc.2", features = ["json", "tls"] }
sqlx = { version = "0.6.0", features = ["offline", "sqlite", "runtime-tokio-rustls"] }
rand = "0.8"
base64 = "0.13"