[package]
name = "rustdesk-api-server"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "libs/utils",
    "libs/state",
    "libs/ui",
]

[features]
default = ["ui"]
ui = [ "dep:ui" ]

[dependencies]
to-socket-addrs = { version = "0.2", features = ["tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.20", features = ["macros", "rt-multi-thread", "sync"] }
tracing = "0.1"
tracing-subscriber = "0.2"

rocket = { version = "0.5.0-rc.2", features = ["json", "tls"] }
sqlx = { version = "0.6.0", features = ["offline", "sqlite", "runtime-tokio-rustls"] }

utils = { path = "libs/utils" }
state = { path = "libs/state" }
ui = { path = "libs/ui", optional = true }
